--- a/Changelogs/3.0Bugs.rst
+++ b/Changelogs/3.0Bugs.rst
@@ -34,6 +34,6 @@
 
     - `Sorry for Command .img Some bugs In image Plugin I fixed it soon`
 
-- [LEGENDBOY](http://t.me/The_LegendBoy)
+- [LEGENDBOY](@s_rajputt)
 - ANY BUGS SEND IN COMMENTS
 - `Do .plinfo <plugin name> to know more about it`
